unpackaged/objects/Monitoring_Impersonation_Alert__c.object
<CustomObject>
	<fields>
		<fullName>Display_Name__c</fullName>
		<label>Display Name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Display__c</fullName>
		<label>Event</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Environment__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Environment</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipName>Monitoring_Impersonation_Alerts</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Event_Date__c</fullName>
		<label>Event Date</label>
		<required>true</required>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>External_ID__c</fullName>
		<externalId>true</externalId>
		<label>External ID</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>Full_Environment_Name__c</fullName>
		<formula>Pipeline__r.Name &amp; &apos; - &apos; &amp; Environment__r.Name</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Full Environment Name</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Pipeline__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Pipeline</label>
		<referenceTo>copado__Deployment_Flow__c</referenceTo>
		<relationshipName>Monitoring_Impersonation_Alerts</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Username__c</fullName>
		<label>Username</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Impersonation Alert</label>
	<listViews>
		<fullName>All</fullName>
		<columns>NAME</columns>
		<columns>Event_Date__c</columns>
		<columns>Pipeline__c</columns>
		<columns>Environment__c</columns>
		<columns>Display_Name__c</columns>
		<columns>Username__c</columns>
		<columns>Display__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>A-{0000}</displayFormat>
		<label>Monitoring Impersonation Alert Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Impersonation Alerts</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>